src/styles/app.pcss
* {
  box-sizing: border-box;
  border-width: 0;
  border-style: solid;
  border-color: #e2e8f0;
}

html,
body {
  width: 100%;
  height: 100%;
  padding: 0;
  margin: 0;
  overflow: hidden;
}

body {
  font-family: 'Open Sans', Helvetica, Arial, Sans-Serif;
  font-size: 16px;
  line-height: 1.5;
  background: radial-gradient(50% 50% at 50% 50%, #ffffff 0%, #f0f4f8 100%);
  overflow-y: auto;
}

blockquote,
dl,
dd,
h1,
h2,
h3,
h4,
h5,
h6,
hr,
figure,
p,
pre {
  margin: 0;
}

pre {
  white-space: pre;
  color: #27241d;
  background: #faf9f7;
  border-radius: 0.25rem;
  font-size: 0.875rem;
  text-align: left;
  padding: 1rem;
  width: 100%;
  user-select: all;
}

code {
  font-family: monospace;
  font-size: 0.875rem;
  padding: 0 0.25rem;
  position: relative;
  z-index: 0;
  white-space: nowrap;
  color: #27241d;
}

code:before {
  position: absolute;
  top: -4px;
  left: -2px;
  width: calc(100% + 4px);
  height: calc(100% + 8px);
  display: block;
  content: '';
  background: #faf9f7;
  z-index: -1;
  border-radius: 0.25rem;
}

.api pre {
  margin: 1rem 0 1rem -8rem;
  width: 36rem;
  padding-left: 8rem;
}

button,
input,
optgroup,
select,
textarea {
  font-size: 100%;
  line-height: inherit;
  font-family: inherit;
  margin: 0;
}

img,
svg,
video,
canvas,
audio,
iframe,
embed,
object {
  display: block;
  vertical-align: middle;
}

#app {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.dialog {
  background-color: #fff;
  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
  padding-top: 4rem;
  padding-bottom: 4rem;
  text-align: center;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
}

.dialog > div {
  max-width: 20rem;
}

h1 {
  font-size: 1.25rem;
  font-weight: 600;
  color: #27241d;
}

h2 {
  font-size: 1.1rem;
  font-weight: 400;
  color: #27241d;
  margin-top: 1.5rem;
}

h2 a {
  color: inherit;
  position: relative;
}

h2 a:hover:before {
  content: '#';
  display: block;
  position: absolute;
  left: -1rem;
}
p {
  font-size: 0.875rem;
  color: #828282;
  margin-top: 1rem;
}

a {
  color: #3e96ac;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

.suggestions {
  display: flex;
  width: 100%;
  justify-content: space-between;
  align-items: center;
  margin-top: 3rem;
  margin-bottom: 3rem;
  user-select: none;
}

.suggestions a {
  text-decoration: none;
  color: inherit;
}
.box {
  padding: 1rem;
  border-radius: 0.25rem;
  font-weight: 300;
  background: #faf9f7;
  transition: transform 0.2s ease, box-shadow 0.2s ease;
  text-decoration: none;
}

.box:hover,
.box:focus,
.cta:hover,
.cta:focus {
  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
  transform: scale(1.02);
  outline: none;
  cursor: pointer;
  text-decoration: none;
}

.box img {
  width: 64px;
  height: 64px;
  margin-bottom: 0.5rem;
}

.cta {
  border-radius: 0.25rem;
  width: 100%;
  text-align: center;
  color: #fff;
  padding: 0.5rem;
  background: #3e96ac;
  font-weight: 400;
  transition: transform 0.2s ease, box-shadow 0.2s ease;
  user-select: none;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  display: block;
}

.unsupported .cta {
  background: #db8175;
}

.unsupported .dialog:before {
  content: '';
  display: block;
  width: 100%;
  height: 4px;
  position: absolute;
  top: 0;
  left: 0;
  background: #db8175;
}

.logo {
  position: absolute;
  top: 1rem;
  left: 1rem;
  max-width: 5rem;
  max-height: 5rem;
  width: auto;
  height: auto;
}

.inline {
  display: inline-block;
}

.menu {
  position: absolute;
  top: -2rem;
  right: 0;
  font-size: 0.875rem;
}

.menu span {
  padding: 0 0.25rem;
}

.menu a,
.menu span {
  color: #27241d;
  opacity: 0.2;
  transition: opacity 0.25s ease;
}

.menu a:hover {
  opacity: 1;
  text-decoration: underline;
}

.left {
  text-align: left;
}

@media (min-width: 640px) {
  .dialog {
    padding-top: 8rem;
    max-width: 36rem;
    height: auto;
  }

  #app.api {
    align-items: start;
  }

  #app.api .dialog {
    padding: 2rem;
    margin: 4rem 0;
  }

  #app.api .dialog .content {
    max-width: 32rem;
  }

  #app.api .dialog pre {
    margin-left: -2rem;
    padding-left: 2rem;
  }

  .dialog {
    border-radius: 0.25rem;
  }

  .dialog:before {
    border-radius: 0.25rem 0.25rem 0 0;
  }
}

